# KaggleLLM-IDE

./: .env.example  .gitignore  README.md  pyproject.toml  setup.cfg
.github/workflows/: release.yml
backend/: auth.py  kaggle_runner.py  main.py  requirements.txt
frontend/: index.html  package.json  vite.config.js
frontend/src/: App.jsx  index.css
frontend/src/hooks/: Usechat.js  Usesession.js
frontend/src/lib/: Api.js
kernel/: kernel_bootstrap.py
