[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["kernel", "backend", "frontend"]

[project]
name = "kaggle-gpu-ide"
version = "0.1.0"
description = "Run Ollama coding models on your own Kaggle GPU instance"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.111.0",
    "uvicorn>=0.29.0",
    "kaggle>=1.6.14",
    "httpx>=0.27.0",
    "python-dotenv>=1.0.0",
    "pyngrok>=7.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "ruff>=0.4.0",
]

[project.urls]
Homepage = "https://github.com/YOUR_USERNAME/kaggle-gpu-ide"
Issues = "https://github.com/YOUR_USERNAME/kaggle-gpu-ide/issues"

[tool.ruff]
line-length = 88